crates/mlcg_builtin_macros/tests/ui/fail_blank_input_name.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/blank_input_name_manifest.toml");
}

fn main() {}
